[package]
name = "horizon"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
dotenv = "0.15.0"
bson = "2.15.0"
futures = "0.3.31"
